--- a/notes.html
+++ b/notes.html
@@ -1,5 +1,9 @@
 <html>
 <p>
+Notes/comments to myself:
+  Tick marks on y axis: 14? (every 2500)
+  </p>
+<p>
 LBJ pic https://img.pngio.com/pin-by-ariel-on-nbasolo-lebron-james-lakers-lebron-james-lebron-james-png-1272_1904.png
 MJ pic https://freepngimg.com/thumb/michael_jordan/29896-3-michael-jordan-image.png
 CSS animation https://cssanimation.rocks/scroll-animations/
