--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <p>The King <font color="#552583"><b>LeBron</b></font> <font color="#ffb410"><b>James</b></font>, or His Airness <font color ="#CF093F"><b>Michael Jeffrey Jordan</b></font></p>
         <p>Between the two players, I think LeBron James has proven <b>time and time again</b> that he is the greatest basketball player of all time</p>
         <p>There are many statistics to prove that LeBron is the <b>more complete, versatile player,</b> and has a greater impact upon his <b>team's success</b></p>
-        <img src="pics/LBJ.png" id="lbj" class="inline-photo show-on-scroll">
+        <img src="LBJ.png" id="lbj" class="inline-photo show-on-scroll">
         <svg>
         </svg>
-        <img src="pics/MJ.png" id="mj" class="inline-photo show-on-scroll">
+        <img src="MJ.png" id="mj" class="inline-photo show-on-scroll">
     </body>
 </html>
